Tue Oct 15 14:51:16 BST  2019  Lee Noar  <lee.noar@sky.com>

	* incl-local/internal/asm_dec.s(SULPROC_STATUS_FLAG_IS_FORKED,
	SULPROC_STATUS_FLAG_IS_EXECED): Define.
	* module/sul.s(sul_exit): Rewrite logic of when to call
	XSOM_DeregisterClient and XARMEABISupport_Cleanup. TST instruction
	can be difficult to understand!
	* pthread/context.c: Silence compiler warning.

Tue Oct 15 14:42:01 BST  2019  Lee Noar  <lee.noar@sky.com>

	* string/_memset-v7l.s: Remove rogue #include.

Sun Sep 29 20:45:45 BST  2019  Lee Noar  <lee.noar@sky.com>

	* sys/exec.c(execve): For a non-chunked stack, don't call __stackalloc_trim.

Sun Sep 29 20:41:24 BST  2019  Lee Noar  <lee.noar@sky.com>

	Main highlights:
	Add support for GCC 8 (ARMEABI).
	Improve pthread performance/reliability

	* configure.ac: Check if the compiler sets __ARM_EABI__ and
	set a variable accordingly so that we can check in the makefile.
	* Makefile.am: For ARM_EABI, add NEON optimised versions of memcpy,
	memmove, memset and strlen written by RISC OS Open.
	Add wmissing.c.
	For ARM_EABI, compile without a chunked stack.
	* common/_exist.s: Load PIC register via macro.
	* common/_riscosify.s: Likewise.
	* common/_taskhandle.s: Likewise.
	* pthread/_exit.s: Likewise.
	* sys/_cpucaps.s: Likewise.
	* crt/crt0.s: Add support for .init_array/.fini_array.
	* crt/gcrt0.s: Likewise.
	* gen-auto.pl: Don't generate misc/abi.c. For GCC 8,
	binutils will set this on the command line. This will be
	the case for GCC 4 in the future.
	* gmon/gmon-start.c: Not currently supported in ARM_EABI/GCC 8.
	* incl-local/internal/asm_dec.s: Add symbols for ARMEABISupport module.
	Add symbols for init_array/fini_array support.
	Add symbols for a pthread fast access structure.
	* incl-local/internal/elf-macros.s(macro __set_errno): Alter to take PIC
	register as argument instead assuming a specific register.
	(macro CHGMODE): For ARM_EABI, assume always 32 bit.
	New macro, PIC_LOAD, to load the PIC register in asm code. This